--- a/Docusaurus/blog/authors.yml
+++ b/Docusaurus/blog/authors.yml
@@ -1,23 +1,11 @@
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-  page: true
-  socials:
-    x: yangshunz
-    github: yangshun
+wuyu0107:
+	name: Min Kim
+	title: Student
+	url: https://github.com/wuyu0107
+	image_url: https://github.com/wuyu0107.png
 
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
-  page:
-    # customize the url of the author page at /blog/authors/<permalink>
-    permalink: '/all-sebastien-lorber-articles'
-  socials:
-    x: sebastienlorber
-    linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
+AmeeraKT:
+	name: Ameera Khaira Tawfiqa
+	title: Student
+	url: https://github.com/AmeeraKT
+	image_url: https://github.com/AmeeraKT.png
